@@ -38,7 +38,6 @@ import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.concurrent.Semaphore;
-import java.util.stream.Collectors;
 
 /**
  * Controller for viewing all the created Gardens
@@ -63,25 +62,24 @@ public class GardensController {
 
     private static final int COUNT_PER_PAGE = 10;
 
-
     private volatile long lastRequestTime = Instant.now().getEpochSecond();
 
     /**
      * Constructor for the GardensController with {@link Autowired} to connect
      * this controller with other services
      *
-     * @param gardenService         service to access garden repository
-     * @param securityService       service to access security methods
-     * @param plantService          service to access plant repository
-     * @param weatherService        service to perform weather api calls
-     * @param objectMapper          used for JSON conversion
-     * @param gardenTagService      service to access tag repository
-     * @param userService           service to access user repository
+     * @param gardenService    service to access garden repository
+     * @param securityService  service to access security methods
+     * @param plantService     service to access plant repository
+     * @param weatherService   service to perform weather api calls
+     * @param objectMapper     used for JSON conversion
+     * @param gardenTagService service to access tag repository
+     * @param userService      service to access user repository
      */
     @Autowired
     public GardensController(GardenService gardenService, SecurityService securityService, PlantService plantService,
-                             WeatherService weatherService, ObjectMapper objectMapper, GardenTagService gardenTagService,
-                             ProfanityService profanityService, UserService userService) {
+            WeatherService weatherService, ObjectMapper objectMapper, GardenTagService gardenTagService,
+            ProfanityService profanityService, UserService userService) {
         this.gardenService = gardenService;
         this.plantService = plantService;
         this.securityService = securityService;
@@ -101,9 +99,9 @@ public class GardensController {
      */
     @GetMapping("/my-gardens")
     public String myGardens(@RequestParam(defaultValue = "1") int page,
-                            @RequestParam(defaultValue = "All") String filter,
-                            HttpServletRequest request,
-                            Model model) {
+            @RequestParam(defaultValue = "All") String filter,
+            HttpServletRequest request,
+            Model model) {
         logger.info("GET /my-gardens");
 
         model.addAttribute("loggedIn", securityService.isLoggedIn());
@@ -153,7 +151,7 @@ public class GardensController {
 
             weatherList.addAll(gardenWeather.getRetrievedWeatherData().stream()
                     .map(WeatherModel::new)
-                    .collect(Collectors.toList()));
+                    .toList());
         } catch (NullPointerException error) {
             noWeather = new DailyWeather("no_weather_available_icon.png", null, null);
             noWeather.setError("Location not found, please update your location to see the weather");
@@ -168,7 +166,7 @@ public class GardensController {
         return weatherList;
     }
 
-    private void handleWeatherMessages(List<WeatherModel> weatherList,  Garden garden, Model model) {
+    private void handleWeatherMessages(List<WeatherModel> weatherList, Garden garden, Model model) {
         WeatherModel beforeYesterdayWeather = weatherList.get(0);
         WeatherModel yesterdayWeather = weatherList.get(1);
         WeatherModel currentWeather = weatherList.get(2);
@@ -180,7 +178,8 @@ public class GardensController {
         if (Objects.equals(beforeYesterdayWeather.getDescription(), "Sunny")
                 && Objects.equals(yesterdayWeather.getDescription(), "Sunny")
                 && Objects.equals(currentWeather.getDescription(), "Sunny")) {
-            model.addAttribute("message", "There hasn't been any rain recently, make sure to water your plants if they need it");
+            model.addAttribute("message",
+                    "There hasn't been any rain recently, make sure to water your plants if they need it");
             model.addAttribute("goodMessage", false);
             gardenService.changeGardenNeedsWatering(garden.getGardenId(), true);
         } else {
@@ -208,12 +207,13 @@ public class GardensController {
      */
     @GetMapping("/my-gardens/{gardenId}")
     public String showGardenDetails(@PathVariable Long gardenId,
-                                    @RequestParam(defaultValue = "1") int page,
-                                    @RequestParam(required = false) String plantPictureError,
-                                    @RequestParam(required = false) String weatherListJson,
-                                    HttpServletRequest request,
-                                    HttpServletResponse response,
-                                    Model model) {
+            @RequestParam(defaultValue = "1") int page,
+            @RequestParam(required = false) String plantPictureError,
+            @RequestParam(required = false) String weatherListJson,
+            HttpServletRequest request,
+            HttpServletResponse response,
+            RedirectAttributes redirectAttributes,
+            Model model) throws ServletException {
         logger.info("GET /my-gardens/{}", gardenId);
         Optional<Garden> optionalGarden = gardenService.getGardenById(gardenId);
 
@@ -233,6 +233,8 @@ public class GardensController {
 
         securityService.addUserInteraction(gardenId, ItemType.GARDEN, LocalDateTime.now());
 
+        Map<String, ?> inputFlashMap = RequestContextUtils.getInputFlashMap(request);
+
         List<WeatherModel> weatherList = null;
 
         try {
@@ -245,7 +247,6 @@ public class GardensController {
         }
 
         try {
-            Map<String, ?> inputFlashMap = RequestContextUtils.getInputFlashMap(request);
             if (inputFlashMap != null) {
                 weatherList = (List<WeatherModel>) inputFlashMap.get("weatherList");
             }
@@ -280,6 +281,7 @@ public class GardensController {
             weatherListJson = objectMapper.writeValueAsString(weatherList);
         } catch (Exception e) {
             logger.error("An error occurred while writing the weatherListJson: {}", e.getMessage());
+            logger.error("An error occurred while writing the weatherListJson: {}", e.getMessage());
         }
 
         model.addAttribute("weatherListJson", weatherListJson);
@@ -294,10 +296,48 @@ public class GardensController {
         model.addAttribute("plantPictureError", plantPictureError);
 
         // Used for displaying messages after a redirect e.g. from the verify page
-        Map<String, ?> inputFlashMap = RequestContextUtils.getInputFlashMap(request);
         if (inputFlashMap != null) {
             model.addAttribute("openModal", inputFlashMap.get("openModal"));
             model.addAttribute("tagMessageText", inputFlashMap.get("tagMessageText"));
+
+            // The below If statements check if the status of a pending tag has
+            // been updated and adjust error messages acrodingly if thats the case
+            if (inputFlashMap.get("pendingTagName") == null) {
+                model.addAttribute("tagMessageText", inputFlashMap.get("tagMessageText"));
+            } else {
+                Optional<GardenTag> pendingTag = gardenTagService
+                        .getByName(inputFlashMap.get("pendingTagName").toString());
+
+                if (pendingTag.isPresent()) {
+                    if (pendingTag.get().getTagStatus() == TagStatus.INAPPROPRIATE) {
+                        // security service will return old strike count so adding one to account for
+                        // this tag.
+                        int userStrikes = securityService.getCurrentUser().getStrikes() + 1;
+                        logger.info("{} now has {} strikes", garden.getOwner().getFirstName(), userStrikes);
+                        model.addAttribute("tagErrorText", "This tag does not meet the language " +
+                                "standards for Gardener's Grove. A warning strike has been added to your account");
+                        if (userStrikes == 5) {
+                            model.addAttribute("tagErrorText",
+                                    "You have added an inappropriate tag for the fifth time." +
+                                            " You have been sent a warning email. " +
+                                            "If you add another inappropriate tag, you will be banned for a week.");
+                        } else if (userStrikes == 6) {
+                            redirectAttributes.addFlashAttribute("message",
+                                    "Your account is blocked for 7 days due to inappropriate conduct");
+                            redirectAttributes.addFlashAttribute("goodMessage", false);
+                            request.logout();
+                            return "redirect:/login";
+                        }
+                        model.addAttribute("tagMessageText", "");
+                    } else if (pendingTag.get().getTagStatus() == TagStatus.APPROPRIATE) {
+                        model.addAttribute("tagMessageText", "");
+                    } else {
+                        model.addAttribute("tagMessageText", inputFlashMap.get("tagMessageText"));
+                    }
+                } else {
+                    model.addAttribute("tagMessageText", inputFlashMap.get("tagMessageText"));
+                }
+            }
         }
 
         List<GardenTagRelation> tagRelationsList = gardenTagService.getGardenTagRelationByGarden(garden);
@@ -315,6 +355,15 @@ public class GardensController {
                 .toList();
 
         model.addAttribute("pendingTags", pendingTags);
+
+        if (garden.getOwner().isBanned()) {
+            redirectAttributes.addFlashAttribute("message",
+                    "Your account is blocked for 7 days due to inappropriate conduct");
+            redirectAttributes.addFlashAttribute("goodMessage", false);
+            request.logout();
+            return "redirect:/login";
+        }
+
         model.addAttribute("tagsList", tagsList);
         return "gardenDetailsPage";
     }
@@ -329,11 +378,11 @@ public class GardensController {
      */
     @PostMapping("/my-gardens/{gardenId}/public")
     public String updateGardenPublicStatus(@PathVariable Long gardenId,
-                                           @RequestParam(name = "makeGardenPublic", required = false, defaultValue = "false") boolean makeGardenPublic,
-                                           @RequestParam(defaultValue = "1") int page,
-                                           @RequestParam(value = "weatherListJson", required = false) String weatherListJson,
-                                           RedirectAttributes redirectAttributes,
-                                           HttpServletResponse response) throws JsonProcessingException {
+            @RequestParam(name = "makeGardenPublic", required = false, defaultValue = "false") boolean makeGardenPublic,
+            @RequestParam(defaultValue = "1") int page,
+            @RequestParam(value = "weatherListJson", required = false) String weatherListJson,
+            RedirectAttributes redirectAttributes,
+            HttpServletResponse response) throws JsonProcessingException {
         logger.info("POST /my-gardens/{}/public", gardenId);
 
         Optional<Garden> optionalGarden = gardenService.getGardenById(gardenId);
@@ -369,13 +418,15 @@ public class GardensController {
     }
 
     /**
-     * Helper to set the model of garden details page for non-blue sky scenarios after tag post-mapping
+     * Helper to set the model of garden details page for non-blue sky scenarios
+     * after tag post-mapping
+     * 
      * @param garden entity of the page to be displayed
-     * @param tag text
-     * @param page index
+     * @param tag    text
+     * @param page   index
      * @return filename of thymeleaf template
      */
-    private String setGardenDetailModel(Garden garden, String tag, int page, Model model){
+    private String setGardenDetailModel(Garden garden, String tag, int page, Model model) {
         List<WeatherModel> weatherList;
         weatherList = getGardenWeatherData(garden);
         if (weatherList.size() > 1) {
@@ -427,12 +478,12 @@ public class GardensController {
      */
     @PostMapping("/my-gardens/{gardenId}/tag")
     public String addGardenTag(@PathVariable Long gardenId,
-                                   @RequestParam("tag") String tag,
-                                   @RequestParam(defaultValue = "1") int page,
-                                   RedirectAttributes redirectAttributes,
-                                   HttpServletResponse response,
-                                   HttpServletRequest request,
-                                   Model model) throws ServletException, InterruptedException {
+            @RequestParam("tag") String tag,
+            @RequestParam(defaultValue = "1") int page,
+            RedirectAttributes redirectAttributes,
+            HttpServletResponse response,
+            HttpServletRequest request,
+            Model model) throws ServletException, InterruptedException {
         logger.info("POST /my-gardens/{}/tag", gardenId);
 
         ValidationResult tagResult = InputValidator.validateTag(tag);
@@ -457,7 +508,8 @@ public class GardensController {
                 asynchronousTagProfanityCheck(tag, garden.getOwner());
             }
 
-            gardenAlreadyHasThisTag = gardenTagService.getGardenTagRelationByGardenAndTag(garden, gardenTag).isPresent();
+            gardenAlreadyHasThisTag = gardenTagService.getGardenTagRelationByGardenAndTag(garden, gardenTag)
+                    .isPresent();
 
             if (!gardenAlreadyHasThisTag && tagResult.valid() && gardenTag.getTagStatus() != TagStatus.INAPPROPRIATE) {
                 gardenTagService.addGardenTagRelation(new GardenTagRelation(garden, gardenTag));
@@ -488,29 +540,47 @@ public class GardensController {
                 }
 
                 if (garden.getOwner().isBanned()) {
-                    redirectAttributes.addFlashAttribute("message", "Your account is blocked for 7 days due to inappropriate conduct");
+                    redirectAttributes.addFlashAttribute("message",
+                            "Your account is blocked for 7 days due to inappropriate conduct");
                     redirectAttributes.addFlashAttribute("goodMessage", false);
                     request.logout();
                     return "redirect:/login";
                 }
             }
 
-
             List<WeatherModel> weatherList;
             weatherList = getGardenWeatherData(garden);
             if (weatherList.size() > 1) {
                 handleWeatherMessages(weatherList, garden, model);
             }
-            return setGardenDetailModel(garden,tag,page,model);
+
+            if (garden.getOwner().isBanned()) {
+                redirectAttributes.addFlashAttribute("message",
+                        "Your account is blocked for 7 days due to inappropriate conduct");
+                redirectAttributes.addFlashAttribute("goodMessage", false);
+                request.logout();
+                return "redirect:/login";
+            }
+            return setGardenDetailModel(garden, tag, page, model);
         }
 
         if (newTag.isPresent() && newTag.get().getTagStatus() == TagStatus.PENDING) {
-            redirectAttributes.addFlashAttribute("tagMessageText", String.format("Your tag \"%s\" is currently being checked for profanity. " +
-                    "If it follows the language standards for our app, it will be added to your garden.", tag));
+            redirectAttributes.addFlashAttribute("tagMessageText",
+                    String.format("Your tag \"%s\" is currently being checked for profanity. " +
+                            "If it follows the language standards for our app, it will be added to your garden.", tag));
+            redirectAttributes.addFlashAttribute("pendingTagName", tag);
         }
 
         redirectAttributes.addAttribute("page", page);
         redirectAttributes.addFlashAttribute("openModal", "true");
+
+        if (garden.getOwner().isBanned()) {
+            redirectAttributes.addFlashAttribute("message",
+                    "Your account is blocked for 7 days due to inappropriate conduct");
+            redirectAttributes.addFlashAttribute("goodMessage", false);
+            request.logout();
+            return "redirect:/login";
+        }
 
         return "redirect:/my-gardens/{gardenId}";
 
@@ -528,13 +598,13 @@ public class GardensController {
      */
     @PostMapping("/my-gardens/{gardenId}")
     public String updatePlantImage(@PathVariable Long gardenId,
-                                   @RequestParam("plantId") Long plantId,
-                                   @RequestParam("weatherListJson") String weatherListJson,
-                                   @RequestParam("plantPictureInput") MultipartFile plantPicture,
-                                   @RequestParam(defaultValue = "1") int page,
-                                   RedirectAttributes redirectAttributes,
-                                   HttpServletResponse response,
-                                   Model model) throws JsonProcessingException {
+            @RequestParam("plantId") Long plantId,
+            @RequestParam("weatherListJson") String weatherListJson,
+            @RequestParam("plantPictureInput") MultipartFile plantPicture,
+            @RequestParam(defaultValue = "1") int page,
+            RedirectAttributes redirectAttributes,
+            HttpServletResponse response,
+            Model model) throws JsonProcessingException {
         logger.info("POST /my-gardens/{}", gardenId);
 
         Optional<Garden> optionalGarden = gardenService.getGardenById(gardenId);
@@ -582,10 +652,10 @@ public class GardensController {
      */
     @GetMapping("/{userId}/gardens")
     public String friendsGardens(Model model,
-                                 @PathVariable("userId") Long userId,
-                                 @RequestParam(defaultValue = "1") int page,
-                                 @RequestParam(defaultValue = "All") String filter,
-                                 HttpServletResponse response) {
+            @PathVariable("userId") Long userId,
+            @RequestParam(defaultValue = "1") int page,
+            @RequestParam(defaultValue = "All") String filter,
+            HttpServletResponse response) {
         logger.info("GET {}/gardens", userId);
 
         User friend;
@@ -650,9 +720,9 @@ public class GardensController {
         return weatherService.getWeather(gardenLatitude, gardenLongitude);
     }
 
-
     /**
-     * Retrieves tag suggestions from the Garden Tag Repository through the Garden Tag Service
+     * Retrieves tag suggestions from the Garden Tag Repository through the Garden
+     * Tag Service
      *
      * @param query - The search query for tag autocomplete suggestions
      * @return a list of garden tags whose names are similar to the query
@@ -669,9 +739,9 @@ public class GardensController {
             if (!tagContainsProfanity) {
                 gardenTagService.updateGardenTagStatus(tagName, TagStatus.APPROPRIATE);
             } else {
+                securityService.handleStrikeUser(user);
                 gardenTagService.updateGardenTagStatus(tagName, TagStatus.INAPPROPRIATE);
                 gardenTagService.deleteRelationByTagName(tagName);
-                securityService.handleStrikeUser(user);
                 logger.info("{} has {} strikes", user.getFirstName(), user.getStrikes());
 
             }
@@ -679,6 +749,5 @@ public class GardensController {
         asyncThread.start();
 
     }
-
 
 }
